--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "node-sass": "^7.0.1",
     "pinia": "^2.0.14",
+    "sass": "^1.53.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
   },
