--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,20 +2,25 @@
   "name": "component-patterns",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "serve": "vite preview",
     "build": "vite build",
-    "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "test:e2e": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress open --e2e'",
-    "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress run --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "dev": "vite",
+    "preview": "vite preview --port 4173",
+    "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress run --e2e'"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "node-sass": "^7.0.1",
     "pinia": "^2.0.14",
+    "roboto-fontface": "*",
     "sass": "^1.53.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuetify": "^3.0.0-beta.4",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
@@ -28,6 +33,8 @@
     "jsdom": "^20.0.0",
     "start-server-and-test": "^1.14.0",
     "vite": "^2.9.12",
-    "vitest": "^0.15.1"
+    "vite-plugin-vuetify": "^1.0.0-alpha.0",
+    "vitest": "^0.15.1",
+    "vue-cli-plugin-vuetify": "~2.5.1"
   }
 }
