V-1: Add E2E tests for Pagination

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,7 +5,7 @@
     "serve": "vite preview",
     "build": "vite build",
     "test:unit": "vitest --environment jsdom",
-    "test:e2e": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress open --e2e'",
+    "test:e2e": "start-server-and-test preview http://127.0.0.1:4173/ 'cypress open --e2e --browser chrome'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "dev": "vite",
     "preview": "vite preview --port 4173",
