--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -1,5 +1,10 @@
 /* eslint-env node */
-module.exports = {
+{
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "commonjs": true
+},
   "root": true,
   "extends": [
     "plugin:vue/vue3-essential",
